# banking-rag-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  run_kiosk.py  setup.py
.trae/documents/: Enhance TTS Text Cleaning.md  Enhance UI Feedback.md  Fix Avatar Frame Size Constraint.md  Fix Avatar State Timing Bug.md  Fix Environment Variable Loading and Deepgram Init.md  Fix Existing Tkinter UI (CustomTkinter).md  Fix Keyboard Toggle Causing Missing Input_Mic_Send on Raspberry Pi.md  Fix Stop Button and Animation.md  Fix TTS Smoothness and Animation Timing.md  Fix Voice Communication with Streaming WebSocket + PyAudio.md  Implement Streaming TTS.md  Implement Streaming Voice Communication (WebSocket + PyAudio).md  Implement Universal 'Click Outside to Hide Keyboard'.md  Make Layout Resilient To Resize On Raspberry Pi (1024x600).md  Optimize Interface for 1024x600 Full Screen.md  Remove unused and redundant files.md  Resize Avatar and Implement Toggleable Keyboard.md  Restore Chat Bubble Width for 1024x600.md  Restore Fullscreen And Add Minimize_Close Buttons.md  Stabilize Input Bar During Keyboard Toggle.md  Switch From Fullscreen To Maximized (1024x600).md  Tighten Chat UI For 1024x600.md  Update Prompt for Conciseness.md
api/: __init__.py  api_router.py  main.py
api/endpoints/: chat.py  health.py  tts.py
api/schemas/: chat.py
config/: __init__.py  config.py  config.yaml
data/: loan_rates.json  savings_rates.json
frontend/: assets.py  config.py  main_window.py
frontend/screens/: chat.py  welcome.py
src/: __init__.py
src/core/: __init__.py  cache.py  logger.py  models.py
src/generation/: llm_builder.py  prompts.py  query_parser.py  rag_engine.py
(+11 files in other folders)
